# tusker

./: .gitignore  CHANGELOG.md  Cargo.toml  LICENSE-APACHE  LICENSE-MIT  README.md  pyproject.toml  tusker.toml  tusker.toml.example
crates/tusker/: CHANGELOG.md  Cargo.toml  README.md
crates/tusker-migration/: CHANGELOG.md  Cargo.toml  README.md
crates/tusker-migration/db/queries/: migration_current.json  migration_current.sql  migration_fake.json  migration_fake.sql  migration_insert.json  migration_insert.sql  migration_log.sql  migration_update.sql
crates/tusker-migration/src/: cli.rs  db.rs  error.rs  file.rs  lib.rs  models.rs  queries.rs
crates/tusker-query/: CHANGELOG.md  Cargo.toml  README.md
crates/tusker-query-derive/: CHANGELOG.md  Cargo.toml  README.md
crates/tusker-query-derive/src/: lib.rs
crates/tusker-query-models/: CHANGELOG.md  Cargo.toml  README.md
crates/tusker-query-models/src/: lib.rs
crates/tusker-query/src/: lib.rs  types.rs
crates/tusker-schema/: CHANGELOG.md  Cargo.toml  README.md
crates/tusker-schema/db/queries/: classes.sql  constraints.sql  domains.sql  enums.sql  extensions.sql  indexes.sql  routines.sql  schemas.sql  sequences.sql  triggers.sql
crates/tusker-schema/src/: diff.rs  lib.rs  queries.rs  sql.rs
crates/tusker-schema/src/models/: column.rs  constraint.rs  domain.rs  enum.rs  extension.rs  index.rs  mod.rs  routine.rs  schema.rs  sequence.rs  table.rs  trigger.rs  view.rs
crates/tusker-schema/tests/: diff.rs
crates/tusker-schema/tests/domain_alter/: a.sql  b.sql  down.sql  up.sql
crates/tusker-schema/tests/domain_create/: b.sql  down.sql  up.sql
crates/tusker-schema/tests/enum_alter/: a.sql  b.sql  down.sql  up.sql
crates/tusker-schema/tests/enum_create/: b.sql  down.sql  up.sql
crates/tusker-schema/tests/function_create/: a.sql  down.sql  up.sql
crates/tusker-schema/tests/function_replace/: a.sql  b.sql  down.sql  up.sql
crates/tusker-schema/tests/index_create/: b.sql  down.sql  up.sql
crates/tusker-schema/tests/procedure_create/: b.sql  down.sql  up.sql
crates/tusker-schema/tests/procedure_replace/: b.sql  down.sql  up.sql
crates/tusker-schema/tests/sequence_alter/: a.sql  b.sql  down.sql  up.sql
crates/tusker-schema/tests/sequence_create/: down.sql  up.sql
crates/tusker-schema/tests/table_alter/: a.sql  b.sql  down.sql  up.sql
crates/tusker-schema/tests/table_create/: b.sql  down.sql  up.sql
crates/tusker-schema/tests/table_fk/: b.sql  down.sql  up.sql
crates/tusker-schema/tests/trigger_create/: b.sql  down.sql  up.sql
crates/tusker-schema/tests/trigger_replace/: b.sql  up.sql
crates/tusker-schema/tests/trigger_state/: b.sql  down.sql  up.sql
crates/tusker/src/: config.rs  db.rs  main.rs
crates/tusker/src/cli/: clean.rs  mod.rs
crates/tusker/src/cli/config/: mod.rs
crates/tusker/src/cli/query/: mod.rs
crates/tusker/src/cli/schema/: check.rs  diff.rs  mod.rs
examples/query/: Cargo.toml
examples/query/src/: main.rs
scripts/: test-postgres-versions.sh
tusker/: __init__.py  config.py
tusker-migration/db/: schema.sql
tusker-migration/db/queries/: migration_delete.json  migration_delete.sql  migration_log.json  migration_update.json
tusker-migration/src/: db.rs
tusker-query/: README.md
tusker-query-derive/: Cargo.toml
tusker-query-models/: Cargo.toml
tusker-query/src/: types.rs
