[tool.poetry]
name = "tusker"
version = "0.1.0"
description = ""
authors = ["Michael P. Jung <michael.jung@terreon.de>"]

[tool.poetry.scripts]
tusker = "tusker:main"

[tool.poetry.dependencies]
python = "^3.8"
migra = "^1.0.1587214226"
psycopg2-binary = "^2.8.5"
tomlkit = "^0.6.0"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
