[tool.poetry]
name = "tusker"
version = "0.2.2"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "Unlicense"
readme = "README.md"
description = "A PostgreSQL specific migration tool"
repository = "https://github.com/bikeshedder/tusker"
homepage = "https://github.com/bikeshedder/tusker"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "Topic :: Database",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
tusker = "tusker:main"

[tool.poetry.dependencies]
python = "^3.7"
migra = "^1.0.1596263757"
psycopg2-binary = "^2.8.5"
tomlkit = "^0.6.0"
sqlalchemy = "^1.3.16"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
