[tool.poetry]
name = "tusker"
version = "0.4.4"
authors = ["Michael P. Jung <michael.jung@terreon.de>"]
license = "Unlicense"
readme = "README.md"
description = "A PostgreSQL specific migration tool"
repository = "https://github.com/bikeshedder/tusker"
homepage = "https://github.com/bikeshedder/tusker"
classifiers = [
    "Programming Language :: Python",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3 :: Only",
    "Development Status :: 4 - Beta",
    "Topic :: Database",
    "Topic :: Utilities",
]

[tool.poetry.scripts]
tusker = "tusker:main"

[tool.poetry.dependencies]
python = "^3.6"
importlib-metadata = {version = "^1.0", python = "<3.8"}
migra = "^3.0.1621480950"
psycopg2-binary = "^2.9.1"
tomlkit = "^0.10"
sqlalchemy = "^1.4.25"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry>=0.12"]
build-backend = "poetry.masonry.api"
