[package]
name = "tusker-migration"
version = "0.1.1"
edition = "2021"
description = "PostgreSQL specific database migration manager"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/tusker"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.0.1", features = ["derive"] }
sha2 = "0.11"
termcolor = "1.4.0"
time = "0.3"
tokio = { version = "1.34.0", features = ["rt"] }
tokio-postgres = { version = "0.7.12", features = ["with-time-0_3"] }
tusker-query = { version = "0.2.0", path = "../tusker-query", features = ["with-time-0_3"] }
