[package]
name = "tusker-query-derive"
version = "0.1.0"
edition = "2021"
description = "Derive macros for tusker-query query and row bindings"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/tusker"

[lib]
proc-macro = true

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
darling = "0.23"
proc-macro2 = "1.0.92"
quote = "1.0.37"
serde_json = "1"
sha2 = "0.11"
syn = "2.0.87"
tusker-query-models = { version = "0.1.0", path = "../tusker-query-models" }
