[package]
name = "tusker-query-models"
version = "0.1.0"
edition = "2021"
description = "Shared models for checked SQL query metadata and type information"
license = "MIT OR Apache-2.0"
repository = "https://github.com/bikeshedder/tusker"
keywords = ["postgresql", "query", "metadata", "types", "json"]
categories = ["data-structures", "database"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
hex = { version = "0.4.3", features = ["serde"] }
serde = { version = "1.0.225", features = ["derive"] }
