[package]
name = "tusker-schema"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
itertools = "0.14.0"
postgres-types = { version = "0.2.8", features = [
    "derive",
    "with-serde_json-1",
] }
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1"
tokio-postgres = { version = "0.7.12" }
tusker-query = { version = "0.1.0", path = "../tusker-query" }
thiserror = "2"

[dev-dependencies]
rstest = "0.26"
tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread"] }
