[package]
name = "tusker"
version = "0.6.0"
edition = "2021"
description = "PostgreSQL specific schema migration tool"
license = "MIT OR Apache-2.0"
rust-version = "1.88"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.75"
clap = { version = "4.0.1", features = ["derive"] }
config = { version = "0.15", default-features = false, features = ["toml"] }
glob = "0.3.1"
serde = { version = "1.0.225", features = ["derive"] }
serde_json = "1"
sha2 = "0.11"
tokio = { version = "1.34.0", features = ["fs", "macros", "rt-multi-thread"] }
tokio-postgres = "0.7.12"
toml = "1"
tusker-migration = { version = "0.1.0", path = "../tusker-migration" }
tusker-query-models = { version = "0.1.0", path = "../tusker-query-models" }
tusker-schema = { version = "0.1.0", path = "../tusker-schema" }
uzers = "0.12.1"
