[package]
name = "tusker-example-query"
version = "0.1.0"
edition = "2021"
license = "MIT OR Apache-2.0"
publish = false

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
config = "0.15.0"
deadpool-postgres = { version = "0.14.0", features = ["serde"] }
dotenvy = "0.15.7"
serde = { version = "1.0.225", features = ["derive"] }
time = "0.3"
tokio = { version = "1.34.0", features = ["macros", "rt-multi-thread"] }
tokio-postgres = { version = "0.7.12", features = ["with-time-0_3"] }
tusker-query = { path = "../../tusker-query" }
